CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2002-2007 by Bill Kendrick and others
bill@newbreedsoftware.com
http://www.tuxpaint.org/

$Id$


2007.July.10 (0.9.18)
  * System-Related Improvements:
    ----------------------------
    * Added an API for developing Magic tools as plug-ins.
      ('.so' shared objects under Linux, '.dll' libraries under Windows, etc.)
      Plugins must provide a number of functions that Tux Paint calls,
      and Tux Paint provides a structure ("magic_api") that includes info.
      (e.g., the running Tux Paint's version number) and pointers to
      useful functions (e.g., getpixel(), putpixel(), etc.)

    * Magic plugin development can be done outside of Tux Paint base
      source-code by using new "tp-magic-config" shell script to query
      for C compiler flags, which points to where "tp_magic_api.h" header
      file is installed.

    * Magic plugin development docs created.  On Linux/Unix, installed into
      /usr/[local/]share/docs/tuxpaint-dev/ by default.

    * Ported existing magic tools to the new Magic tool plug-in system:
      (Blur, Fill, Lighten, Darken, Mirror, Flip, Rainbow, Blocks, Chalk,
      Grass, Negative, Tint, Smudge, Drip, Cartoon, Brick (large & small))

    * Began adding support for using SDL_Pango, a wrapper to Pango,
      a library for layout and rendering of text, with an emphasis on
      internationalization.  (The hope is to improve support for languages
      that SDL_ttf doesn't support well; e.g., Arabic and Telegu.)

      TTF_Font structs and some functions were replaced by a new
      TuxPaint_Font struct and function, which wraps around either TTF_Font
      or both a TTF_Font and a SDLPango_Context, depending on whether
      SDL_Pango is being used, and how the font was loaded.

      Can be disabled (will use older SDL_ttf-based code) by building with
      "make nopango".
