@@ -10,7 +10,7 @@
 
   $Id$
   
-  June 14, 2002 - April 26, 2007
+  June 14, 2002 - July 14, 2007
 */
 
 
@@ -39,6 +39,7 @@ enum
   LANG_EN,			/* English (American) (DEFAULT) */
   LANG_EN_GB,			/* English (British) */
   LANG_EN_ZA,			/* English (South African) */
+  LANG_EO,			/* Esperanto */
   LANG_ES,			/* Spanish */
   LANG_ES_MX,			/* Spanish (Mexican) */
   LANG_ET,			/* Estonian */
